resolver/kustomize/resolver/overlays/local/uni-resolver-web/ingress.yml
# 
# Copyright SecureKey Technologies Inc. All Rights Reserved. 
# 
# SPDX-License-Identifier: Apache-2.0 
# 

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uni-resolver-web
  labels:
    app: uni-resolver-web
spec:
  tls:
  - hosts:
      - $(UNI_RESOLVER_WEB_SERVICE_NAME).||DOMAIN||
    secretName: $(INGRESS_TLS_SECRET)
  rules:
  - host: $(UNI_RESOLVER_WEB_SERVICE_NAME).||DOMAIN||
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uni-resolver-web
            port:
              name: http
